# kinect2ros

./: .clang-format  CMakeLists.txt  package.xml
camera_calibration/color/: ost.txt  ost.yaml
camera_calibration/depth/: ost.txt  ost.yaml
include/kinect2ros/: kinect2ros.hpp
src/: kinect2ros.cpp  main.cpp  parameters.yaml
